0.8
 - [feature] detect last chapter (movies only) and optionally bring lights up (credits) (SUPER EXPERIMENTAL. ONLY ENABLE IF YOU'RE BRAVE/CRAZY AND ARE WILLING TO HAVE LIGHTS TURN ON DURING A MOVIE)
 - [feature] proportional transition times (e.g. if going from 0-30% brightness, only take 30% of transition time) (optional)

0.7.2
 - [fix] enhanced logging for autodiscovery
 - [feature] added meethue.com api for autodiscovery as fallback for local SSDP
 - [fix] changed one lang string (Theatre -> Theater)

0.7.1
 - [fix] uses group api to trigger light changes instead of indiviually controlling lights (better response time)
 - [fix] if lights are turning off, send a full "off" command with a transition time instead of dim to 0 and then off (smoother transition)
 - [feature] if pause for framerate change is enabled, then handle first pause of playback (i.e. don't dim)
 - [fix] disable continuous capture if not in ambilight mode
 - [info] updated icon

0.7
 - [info] forked by michaelrcarroll
 - [info] changed xbmc references to kodi
 - [feature] optionally add pause brightness override

0.6.2
 - [feature] optionally disable add-on for short movies
 - [feature] Full color support for LightStrips and Bloom Friends of hue

0.6.1
 - [feature] control dim/undim times from settings
 - [fix] crash on livingwhite lights

0.6.0
 - general improvements all around

0.5.0
 - [feature] support livingwhite lights
 - [feature] dim lights using current Hue settings
 - [add] debug logging
 - [add] nosetests

0.4.3
 - [add] - improved advanced settings

0.4.2
 - [fix] - bugfix

0.4.0
 - [add] - advanced settings